# org-nixos-config-public

./: .gitattributes  .gitignore  .syncignore  CONTRIBUTING.md  LICENSE  README.md  command-not-found.sh  dev.sh  flake.nix  host-config.nix  install-ubuntu.sh  install.sh  lib.nix  test.nix
demo-org-config/: deployment_services.nix
modules/: app-configs.nix  auto_decrypt.nix  auto_shutdown.nix  aws.nix  azure.nix  boot.nix  crypto.nix  default.nix  defaultUbuntu.nix  disko.nix  docker.nix  hardware-configs.nix  hetzner.nix  lib.nix  live_system.nix  load_json.nix  maintenance.nix  network.nix  nfs-client.nix  nfs.nix  nix.nix  org.nix  org_users.nix  packages.nix  reverse-tunnel.nix  rsync-backup.nix  s3fs.nix  server-lock.nix  sops.nix  sshd.nix  sudo.nix  swap.nix  syno_vm.nix  system-manager.nix  system-options.nix  system.nix  traefik.nix  tunnel-key.nix  users.nix  (+6 more)
scripts/python_nixostools/: default.nix  dump_roles_for_audit.py  pyproject.toml
scripts/python_nixostools/nixostools/: add_encryption_key.py  copy_down_dhis2.py  decrypt_server_secrets.py  derive_age_keys.py  encrypt_server_secrets.py  extract_server_app_configs.py  generate_server_app_configs.py  install.py  sops.py  sops_yaml.py  sync_users_to_sops_yaml.py  update_nixos_keys.py
scripts/python_nixostools/nixostools/ansible_vault_lib/: __init__.py
scripts/python_nixostools/nixostools/config_lib/: __init__.py
scripts/python_nixostools/nixostools/ocb_nixos_lib/: __init__.py
scripts/python_nixostools/nixostools/secret_lib/: __init__.py
scripts/python_nixostools/nixostools/util_lib/: __init__.py
(+92 files in other folders)
